// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import-file customs props import-file has correct custom props behavior 1`] = `
<div
  class="el-dialog__wrapper import-file-block"
  name="dialog-fade"
  style="z-index: 2001;"
>
  <div
    class="el-dialog"
    style="width: 550px; margin-top: 15vh;"
  >
    <div
      class="el-dialog__header"
    >
      <span
        class="el-dialog__title"
      >
        报表导入
      </span>
      <button
        aria-label="Close"
        class="el-dialog__headerbtn"
        type="button"
      >
        <i
          class="el-dialog__close el-icon el-icon-close"
        />
      </button>
    </div>
    <div
      class="el-dialog__body"
    >
      <div>
        <div
          class="import-init"
        >
          <span>
            选择要导入的文件：
          </span>
           
          <button
            class="el-button el-button--primary el-button--small"
            type="button"
          >
            <!---->
            <!---->
            <span>
              选择文件
            </span>
          </button>
           
          <a
            class="import-init__download"
            href="javascript:;"
            target="_blank"
          >
            模板文件下载
          </a>
            
          <input
            accept=".xlsx,.xls,.img"
            name="file"
            style="display: none;"
            type="file"
          />
        </div>
         
        <div
          class="import-tip"
        >
          <h5>
            注意事项：
          </h5>
           
          <p
            class="import-tip__item"
          >
            1. 请按照导出文件的格式进行导入，系统数据以本次导入的为准，历史数据的会被覆盖掉；
          </p>
           
          <p
            class="import-tip__item"
          >
            2. 单次导入的数据最多5000行，如果数据量大，请分批导入；
          </p>
           
          <p
            class="import-tip__item"
          >
            3. 文件大小不能超过2M。
          </p>
        </div>
      </div>
       
      <!---->
       
      <!---->
       
      <!---->
       
    </div>
    <div
      class="el-dialog__footer"
    >
      <div>
        <button
          class="el-button el-button--default"
          type="button"
        >
          <!---->
          <!---->
          <span>
            取消
          </span>
        </button>
         
        <button
          class="el-button el-button--primary is-disabled"
          disabled="disabled"
          type="button"
        >
          <!---->
          <!---->
          <span>
            开始导入
          </span>
        </button>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`import-file default props & data import-file default props & data 1`] = `
<div
  class="el-dialog__wrapper import-file-block"
  name="dialog-fade"
  style="display: none;"
>
  <div
    class="el-dialog"
    style="width: 550px; margin-top: 15vh;"
  >
    <div
      class="el-dialog__header"
    >
      <span
        class="el-dialog__title"
      >
        导入
      </span>
      <button
        aria-label="Close"
        class="el-dialog__headerbtn"
        type="button"
      >
        <i
          class="el-dialog__close el-icon el-icon-close"
        />
      </button>
    </div>
    <!---->
    <div
      class="el-dialog__footer"
    >
      <div>
        <button
          class="el-button el-button--default"
          type="button"
        >
          <!---->
          <!---->
          <span>
            取消
          </span>
        </button>
         
        <button
          class="el-button el-button--primary is-disabled"
          disabled="disabled"
          type="button"
        >
          <!---->
          <!---->
          <span>
            开始导入
          </span>
        </button>
         
        <!---->
      </div>
    </div>
  </div>
</div>
`;
